--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+Nav {
+  display: flexbox;
+  align-items: center;
+}
+
+.hero {
+  width: 75%;
+  height: 75%;
+}
+
+.home {
+  width: 85%;
+  height: 85%;
+}
+
+.message {
+  background-color: rgb(11, 11, 136);
+  color: white;
+  text-align: left;
+  font-size: 18pt;
+}
+
+.message .bold {
+  font-weight: bold;
+}
+
+.bluerow {
+  background-color: rgb(11, 11, 136);
+  margin: 0;
+  padding: 0;
+  height: 460px;
 }
